add static file

--- a/products/templates/products/index.html
+++ b/products/templates/products/index.html
@@ -8,6 +8,6 @@
             {% endfor %}
         </ul>
     {% else %}
-        <p>No polls are available.</p>
+        <p>No products</p>
     {% endif %}
 {% endblock %}
