prev template continued

--- a/products/templates/products/base.html
+++ b/products/templates/products/base.html
@@ -9,18 +9,17 @@
     <link href='http://fonts.googleapis.com/css?family=Pacifico|Open+Sans:400,700,400italic,700italic&amp;subset=latin,latin-ext,greek' rel='stylesheet' type='text/css'>
     <link href="{% static 'products/stylesheets/bootstrap.css' %}" rel="stylesheet">
     <link href="{% static 'products/stylesheets/responsive.css' %}" rel="stylesheet">
-    <link href="stylesheets/responsive.css" rel="stylesheet">
-    <link rel="stylesheet" href="js/jquery-ui-1.10.3/css/smoothness/jquery-ui-1.10.3.custom.min.css" type="text/css"/>
-    <link rel="stylesheet" href="js/prettyphoto/css/prettyPhoto.css" type="text/css"/>
-    <link href="stylesheets/main.css" rel="stylesheet">
-    <script src="js/modernizr.custom.56918.js"></script>    
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/apple-touch/144.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/apple-touch/114.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/apple-touch/72.png">
-    <link rel="apple-touch-icon-precomposed" href="images/apple-touch/57.png">
-    <link rel="shortcut icon" href="images/apple-touch/57.png">
+    <link rel="stylesheet" href="{% static 'products/js/jquery-ui-1.10.3/css/smoothness/jquery-ui-1.10.3.custom.min.css' %}" type="text/css"/>
+    <link rel="stylesheet" href="{% static 'products/js/prettyphoto/css/prettyPhoto.css' %}" type="text/css"/>
+    <link href="{% static 'products/stylesheets/main.css' %}" rel="stylesheet">
+    <script src="{% static 'products/js/modernizr.custom.56918.js' %}"></script>    
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{% static 'products/images/apple-touch/144.png' %}">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{% static 'products/images/apple-touch/114.png' %}">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{% static 'products/images/apple-touch/72.png' %}">
+    <link rel="apple-touch-icon-precomposed" href="{% static 'products/images/apple-touch/57.png' %}">
+    <link rel="shortcut icon" href="{% static 'products/images/apple-touch/57.png' %}">
 </head>
-<body>i
+<body>
     <div class="page-header">
         <h1><a href="/">market</a></h1>
     </div>
